# git-fork-recon

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  SERVER_PLAN.md  TODO.md  pyproject.toml  requirements.txt
examples/: DunbrackLab-IPSAE-forks.deepseek-v3.2.md  DunbrackLab-IPSAE-forks.gemini-2.5-flash.md
src/git_fork_recon/: cli.py  config.py  main.py
src/git_fork_recon/git/: repo.py
src/git_fork_recon/github/: api.py
src/git_fork_recon/llm/: client.py
src/git_fork_recon/report/: generator.py
src/git_fork_recon/report/templates/: master.md.jinja  report.md.jinja
src/git_fork_recon_server/: analysis.py  app.py  auth.py  cache.py  cli.py  models.py
src/git_fork_recon_server/static/: index.html
